@@ -121,4 +121,5 @@
 	* il_icns.h: Changed comments on ICNSDATA.
 	* il_exr.c: Added ilIsValidExr*.
 	* il_io.c (ilLoadF): Uncommented ilLoadJp2F.
+	* il_dds-save.c (CompressTo565): Changed 24-bit to 16-bit code based on Charles Bloom's rant.
 	
